--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <head>
   <title>My Times</title>
-<link href="../resources/css/style.css" type="text/css" rel="stylesheet">
+<link href="/resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
@@ -10,7 +10,7 @@
     
   <header>
     <div class="logo">
-        <img src="../resources/images/img-myt-logo.jpg"/>
+        <img src="/resources/images/img-myt-logo.jpg"/>
         <span>My Times</span>
     </div>
     <nav class="nav">
