--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                        <h2>Orca Spends Vacation at Land World Puget</h2>
                            <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
                          <div class="earthspins imagecaption"><span>Earth Spins Backwards for 2017</span></div></div>
-                     <div class="stories">
+                         <div class="stories">
                      <h2>Burger for Breakfast: How Early is too Early?</h2>
                           <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-                         <div class= "research imagecaption"><span>Research Shows Cameras Erase Memory</span></div></div></div></div>
+                             <div class= "research imagecaption"><span>Research Shows Cameras Erase Memory</span></div></div></div></div>
         <!--  This is the Second Column-->
              <div class="second">
                <div class="stories">
@@ -46,7 +46,7 @@
                  <div class=" cats imagecaption">
                      <span>Cats in Control-Is It a Thing?</span></div>
                  <div class="stories">
-                      <p class="narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p></div></div>
+                <p class="narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p></div></div>
         <!--  This is the Third Column-->
              <div class="third">
              <img class="cookie" src="resources/images/img-news-bite.png"/>
@@ -58,16 +58,17 @@
                   <span class ="bite">Advertising Internet Online</span>
                   <span class ="bite">Illustration in Marketing Materials</span>
                    <span class ="bite">Finally a Top Secret Way You Can</span></div></div></div>
-      <footer>
+         <!--This is the Footer-->
+       <footer>
           <div class="mytimes"><span class="footertitle">MY Times</span>
               <nav class="footer nav">
                 <span><a href="#">World</a></span>
                 <span><a href="#">U.S.</a></span>
                 <span><a href="#">Tech</a></span>
                 <span><a href="#">Science</a></span>
-    </nav></div>
+             </nav></div>
         <div class="copyright">© 2016, My Times (A Division of Codecademy bite)</div>
-    </footer>
+       </footer></body>
         
 
                 
